--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Arindam Trivedi</title>
 </head>
 <body>
-    <img src="fiverr.jpeg">
+    <a href="https://www.fiverr.com/arindam_trivedi" target="new"><img src="fiverr.jpeg"></a>
 </body>
 </html>
